// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box renders 1`] = `
.glamor-1 {
  margin: 16px;
  padding-left: 32px;
  padding-right: 32px;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

<div
  className="glamor-0 glamor-1"
  is={null}
/>
`;

exports[`Box renders with \`is\` prop 1`] = `
.glamor-1 {
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

<section
  className="glamor-0 glamor-1"
  is={null}
/>
`;

exports[`Box renders with props 1`] = `
.glamor-1 {
  width: 100%;
  margin: 8px;
  padding-left: 8px;
  padding-right: 8px;
  flex: 1 1 auto;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

@media screen and (min-width: 40em) {
  .glamor-1 {
    margin: 16px;
    padding-left: 16px;
    padding-right: 16px;
  }
}

<div
  className="glamor-0 glamor-1"
  is={null}
/>
`;

exports[`Flex renders 1`] = `
.glamor-2 {
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="glamor-0 glamor-1 glamor-2"
  is={null}
/>
`;

exports[`Flex renders with column prop 1`] = `
.glamor-2 {
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
  className="glamor-0 glamor-1 glamor-2"
  is={null}
/>
`;

exports[`Flex renders with props 1`] = `
.glamor-2 {
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
}

<div
  className="glamor-0 glamor-1 glamor-2"
  is={null}
/>
`;

exports[`Flex renders with responsive props 1`] = `
.glamor-2 {
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
}

@media screen and (min-width: 40em) {
  .glamor-2 {
    flex-wrap: ;
    flex-direction: row;
  }
}

<div
  className="glamor-0 glamor-1 glamor-2"
  is={null}
/>
`;

exports[`Grid renders 1`] = `
.glamor-2 {
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: top;
}

<div
  className="glamor-0 glamor-1 glamor-2"
  is={null}
/>
`;
